2004-09-15 Chris Wiebe

	Allow sorting categories to be accessed from subclass.
	Namespaces with reserved names should be sorted the same as celements.
	* src/org/eclipse/cdt/ui/CElementSorter.java

2004-09-15 Chris Wiebe

	refactoring generic stuff out of browser/ and typeinfo-specific stuff back in
	* src/org/eclipse/cdt/internal/ui/CUIMessages.properties
	* src/org/eclipse/cdt/internal/ui/viewsupport/CUILabelProvider.java
	* src/org/eclipse/cdt/internal/ui/viewsupport/StatusBarUpdater.java
	* src/org/eclipse/cdt/internal/ui/viewsupport/StorageLabelProvider.java

2004-09-14 Alain Magloire

	Pr 73831. Tentative fix
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferencPage.java
	* src/org/eclipse/cdt/internal/ui/text/util/CColorManager.java

2004-09-14 Alain Magloire

	Define contentTypes for some of the
	extension points.
	* plugin.xml

2004-09-11 Alain Magloire

	Allow grouping of namespace in the outliner.
	See the appereance namespace.

	* src/org/eclipse/cdt/internal/ui/BaseCElementContentProvider.java
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinerProvider.java
	* src/org/eclipse/cdt/internal/ui/preferences/AppearancePreferencePage.java
	* src/org/eclipse/cdt/ui/CElementGrouping.java
	* src/org/eclipse/cdt/ui/CUIPreferenceInitializer.java
	* src/org/eclipse/cdt/ui/NamespacesGrouping.java
	* src/org/eclipse/cdt/ui/PreferenceConstants.java

2004-09-09 David Inglis

	Fix large gap between image and text in CView and ProjectView

	* browser/org/eclipse/cdt/internal/ui/browser/cbrowsing/ProjectsView.java
	* src/org/eclipse/cdt/internal/ui/cview/CView.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewLabelProvider.java
	
2004-09-09 David Inglis
	Fix for 36837 - CVS decoration updating

	* src/org/eclipse/cdt/internal/ui/editor/CEditorErrorTickUpdater.java
  	* src/org/eclipse/cdt/internal/ui/util/ProblemTreeViewer.java

	removed Eclipse 1.0 way of decorating label providers - use label decorators
