@@ -62,3 +62,8 @@ IndexerOptions.enableSemantic = Report &semantic problems
 IndexerOptions.enableSyntactic = Report s&yntactic problems
 
 StatusBarUpdater.num_elements_selected={0} items selected
+
+CElementLabels.anonymous=(anon)
+CElementLabels.concat_string=\ -\ 
+CElementLabels.comma_string=,\ 
+CElementLabels.declseparator_string=\ :\ 
